--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -435,6 +435,14 @@
 	</dict>
 	<key>Default Bookmark Guid</key>
 	<string>660738FC-1050-4342-BDC9-D0B0A48177D0</string>
+	<key>DimBackgroundWindows</key>
+	<true/>
+	<key>DimOnlyText</key>
+	<true/>
+	<key>EnableDivisionView</key>
+	<true/>
+	<key>EnableProxyIcon</key>
+	<true/>
 	<key>GlobalKeyMap</key>
 	<dict>
 		<key>0x19-0x60000</key>
@@ -536,7 +544,19 @@
 			<string></string>
 		</dict>
 	</dict>
+	<key>HideActivityIndicator</key>
+	<false/>
+	<key>HideScrollbar</key>
+	<false/>
+	<key>HideTab</key>
+	<false/>
+	<key>HideTabCloseButton</key>
+	<false/>
+	<key>HideTabNumber</key>
+	<true/>
 	<key>HotkeyMigratedFromSingleToMulti</key>
+	<true/>
+	<key>JobName</key>
 	<true/>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
@@ -585,10 +605,14 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1102 179 503 323 0 0 1680 1028 </string>
+	<string>1102 179 503 189 0 0 1680 1028 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>428 550 796 473 0 0 1680 1028 </string>
+	<string>559 595 918 394 0 0 1680 1028 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
+	<string>0 26 1671 1002 0 0 1680 1028 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>0 4 1680 1024 0 0 1680 1028 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
 	<string>0 4 1680 1024 0 0 1680 1028 </string>
 	<key>New Bookmarks</key>
 	<array>
@@ -627,12 +651,16 @@
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
+				<key>Alpha Component</key>
+				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.1936781108379364</real>
+				<real>0.61568627450980395</real>
+				<key>Color Space</key>
+				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.77650481462478638</real>
+				<real>0.78431372549019607</real>
 				<key>Red Component</key>
-				<real>0.17413772642612457</real>
+				<real>0.19215686274509805</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
@@ -692,13 +720,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.61568627450980395</real>
+				<real>0.52937432437297882</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.78431372549019607</real>
+				<real>0.6743621826171875</real>
 				<key>Red Component</key>
-				<real>0.19215686274509805</real>
+				<real>0.16521873499745482</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
@@ -757,13 +785,13 @@
 				<key>Alpha Component</key>
 				<real>1</real>
 				<key>Blue Component</key>
-				<real>0.866455078125</real>
+				<real>0.866485595703125</real>
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.83901081136558731</real>
+				<real>0.83904038565314698</real>
 				<key>Red Component</key>
-				<real>0.79980471599499703</real>
+				<real>0.79983285757211564</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
@@ -1389,13 +1417,13 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SourceCodeProForPowerline-Medium 16</string>
+			<string>SauceCodeProNerdFontComplete-Regular 18</string>
 			<key>Open Toolbelt</key>
 			<false/>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
-			<false/>
+			<integer>2</integer>
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
@@ -1403,7 +1431,7 @@
 			<key>Screen</key>
 			<integer>-1</integer>
 			<key>Scrollback Lines</key>
-			<integer>1000</integer>
+			<integer>5000</integer>
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Alpha Component</key>
@@ -1470,8 +1498,14 @@
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
+	<key>NoSyncPermissionToShowTip</key>
+	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>544835205.52519798</real>
+	<key>OnlyWhenMoreTabs</key>
+	<false/>
+	<key>PasteTabToStringTabStopSize</key>
+	<integer>4</integer>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1507,6 +1541,8 @@
 	</dict>
 	<key>PrefsCustomFolder</key>
 	<string>/Users/christiannaths/Projects/christiannaths/dotfiles/iTerm2</string>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
@@ -1516,11 +1552,29 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-04-08T18:27:22Z</date>
+	<date>2018-04-17T04:24:02Z</date>
 	<key>SUSendProfileInfo</key>
+	<false/>
+	<key>ShowBookmarkName</key>
+	<false/>
+	<key>ShowNewOutputIndicator</key>
+	<true/>
+	<key>SplitPaneDimmingAmount</key>
+	<real>0.44594100560897432</real>
+	<key>StretchTabsToFillBar</key>
+	<false/>
+	<key>TabStyle</key>
+	<integer>0</integer>
+	<key>TabViewType</key>
+	<integer>2</integer>
+	<key>UseBorder</key>
+	<false/>
+	<key>WindowNumber</key>
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>iTerm Version</key>
 	<string>3.1.6beta5</string>
 	<key>kCPKSelectionViewPreferredModeKey</key>
