--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -4,4 +4,6 @@ cask_args appdir: "/Applications"
 tap "caskroom/cask"
 cask "google-chrome"
 cask "visual-studio-code"
-cask "kitty"
+brew "zsh"
+brew "zsh-completions"
+brew "node"
