--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -12,9 +12,12 @@ brew "zsh"
 
 cask_args appdir: "/Applications"
 tap "caskroom/cask"
+
 cask "1password"
 cask "dropbox"
 cask "google-chrome"
 cask "iterm2"
 cask "slack"
 cask "visual-studio-code"
+casl "insomnia"
+casl "postico"
