--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -14,10 +14,12 @@ cask_args appdir: "/Applications"
 tap "caskroom/cask"
 
 cask "1password"
+cask "alfred"
 cask "dropbox"
 cask "google-chrome"
+cask "insomnia"
 cask "iterm2"
+cask "moom"
+cask "postico"
 cask "slack"
 cask "visual-studio-code"
-casl "insomnia"
-casl "postico"
