updates zsh config

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -17,8 +17,10 @@ cask "dropbox"
 cask "expressvpn"
 cask "google-chrome"
 cask "insomnia"
-cask "iterm2"
 cask "moom"
 cask "postico"
 cask "slack"
 cask "visual-studio-code"
+
+tap "sambadevi/powerlevel9k"
+brew "powerlevel9k"
