- adds Hyper config - adds powerline fonts for zsh - adds cloud-city themes for iTerm and Terminal - updates .zshrc file

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,4 +1,9 @@
+cask_args appdir: "/Applications"
+tap "caskroom/cask"
+
 brew "chruby"
+brew "fzf"
+brew "kubernetes-cli"
 brew "node"
 brew "openssl"
 brew "rsync"
@@ -7,20 +12,15 @@ brew "watchman"
 brew "wget"
 brew "zsh-completions"
 brew "zsh"
-
-cask_args appdir: "/Applications"
-tap "caskroom/cask"
-
 cask "1password"
 cask "alfred"
 cask "dropbox"
 cask "expressvpn"
+cask "figma"
 cask "google-chrome"
+cask "hyper"
 cask "insomnia"
 cask "moom"
 cask "postico"
 cask "slack"
 cask "visual-studio-code"
-
-tap "sambadevi/powerlevel9k"
-brew "powerlevel9k"
