adds docker to brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -14,6 +14,7 @@ brew "zsh-completions"
 brew "zsh"
 cask "1password"
 cask "alfred"
+cask "docker"
 cask "dropbox"
 cask "expressvpn"
 cask "figma"
