adds some thingys to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -3,9 +3,12 @@ tap "caskroom/cask"
 
 brew "chruby"
 brew "fzf"
+brew "heroku/brew/heroku"
 brew "kubernetes-cli"
 brew "node"
 brew "openssl"
+brew "postgresql"
+brew "redis"
 brew "rsync"
 brew "ruby-install"
 brew "watchman"
@@ -22,6 +25,7 @@ cask "google-chrome"
 cask "hyper"
 cask "insomnia"
 cask "moom"
+cask "notion"
 cask "postico"
 cask "slack"
 cask "the-unarchiver"
