- adds VSCode config - adds submodules for missing zsh plugins - adds a few things to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,6 +1,8 @@
 cask_args appdir: "/Applications"
 tap "caskroom/cask"
+tap "caskroom/fonts"
 
+brew "aria2"
 brew "chruby"
 brew "fzf"
 brew "heroku/brew/heroku"
@@ -21,9 +23,10 @@ cask "docker"
 cask "dropbox"
 cask "expressvpn"
 cask "figma"
+cask "font-source-code-pro-for-powerline"
 cask "google-chrome"
-cask "hyper"
 cask "insomnia"
+cask "iterm2"
 cask "moom"
 cask "notion"
 cask "numi"
