--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "Zsh/powerline/nerd-font"]
 	path = Zsh/powerline/nerd-font
 	url = https://github.com/ryanoasis/nerd-fonts.git
+[submodule "Zsh/fast-syntax-highlighting"]
+	path = Zsh/fast-syntax-highlighting
+	url = https://github.com/zdharma/fast-syntax-highlighting.git
+[submodule "Zsh/zsh-autoenv"]
+	path = Zsh/zsh-autoenv
+	url = https://github.com/Tarrasch/zsh-autoenv.git
+[submodule "Zsh/zsh-autosuggestions"]
+	path = Zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
