replaces complicated Zsh config with a much simpler one

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -7,12 +7,15 @@ brew "chruby"
 brew "fzf"
 brew "heroku/brew/heroku"
 brew "kubernetes-cli"
+brew "mas"
 brew "node"
 brew "openssl"
 brew "postgresql"
 brew "redis"
 brew "rsync"
 brew "ruby-install"
+brew "tree"
+brew "getantibody/tap/antibody"
 brew "watchman"
 brew "wget"
 brew "zsh-completions"
@@ -23,7 +26,7 @@ cask "docker"
 cask "dropbox"
 cask "expressvpn"
 cask "figma"
-cask "font-source-code-pro-for-powerline"
+cask "font-source-code-pro"
 cask "google-chrome"
 cask "insomnia"
 cask "iterm2"
@@ -31,6 +34,12 @@ cask "moom"
 cask "notion"
 cask "numi"
 cask "postico"
+cask "sip"
 cask "slack"
 cask "the-unarchiver"
 cask "visual-studio-code"
+mas "Affinity Designer", id: 824171161
+mas "Affinity Photo", id: 824183456
+mas "Moom", id: 419330170
+mas "Speedtest", id: 1153157709
+mas "Xcode", id: 497799835
