--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -600,7 +600,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>587 33 853 710 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>269 298 796 486 0 0 1440 877 </string>
+	<string>269 246 796 486 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 10 1438 867 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
@@ -870,7 +870,7 @@
 			<key>Character Encoding</key>
 			<integer>4</integer>
 			<key>Close Sessions On End</key>
-			<true/>
+			<false/>
 			<key>Columns</key>
 			<integer>300</integer>
 			<key>Command</key>
@@ -1458,6 +1458,8 @@
 			</dict>
 			<key>Send Code When Idle</key>
 			<false/>
+			<key>Session Close Undo Timeout</key>
+			<integer>15</integer>
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
