--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -4,7 +4,12 @@ tap "caskroom/fonts"
 
 brew "aria2"
 brew "chruby"
+brew "docker-compose"
+brew "docker-machine-driver-xhyve"
+brew "docker-machine"
+brew "docker"
 brew "fzf"
+brew "getantibody/tap/antibody"
 brew "heroku/brew/heroku"
 brew "kubernetes-cli"
 brew "mas"
@@ -15,9 +20,9 @@ brew "redis"
 brew "rsync"
 brew "ruby-install"
 brew "tree"
-brew "getantibody/tap/antibody"
 brew "watchman"
 brew "wget"
+brew "xhyve"
 brew "zsh-completions"
 brew "zsh"
 cask "1password"
@@ -37,7 +42,9 @@ cask "postico"
 cask "sip"
 cask "slack"
 cask "the-unarchiver"
+cask "virtualbox"
 cask "visual-studio-code"
+cask "vlc"
 mas "Affinity Designer", id: 824171161
 mas "Affinity Photo", id: 824183456
 mas "Moom", id: 419330170
