--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -50,3 +50,4 @@ mas "Affinity Photo", id: 824183456
 mas "Moom", id: 419330170
 mas "Speedtest", id: 1153157709
 mas "Xcode", id: 497799835
+mas "Medis", id: 1063631769
