--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,28 +1,59 @@
 {
-    "workbench.colorTheme": "Cloud City",
-    "workbench.settings.editor": "json",
-    "editor.fontSize": 15,
-    "editor.fontFamily": "Source Code Pro, Menlo, Monaco, 'Courier New', monospace",
-    "editor.fontWeight": "500",
-    "explorer.openEditors.visible": 0,
-    "files.hotExit": "off",
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/node_modules": true,
-    },
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true,
-    "window.openFilesInNewWindow": "on",
-    "workbench.iconTheme": "city-lights-icons-vsc-light",
-    "files.associations": {
-        ".devrc": "json",
-        ".env.development": "shellscript",
-        ".env.test": "shellscript"
-    },
-    "workbench.startupEditor": "newUntitledFile"
+  "workbench.colorTheme": "Cloud City",
+  "workbench.settings.editor": "json",
+  "editor.fontSize": 15,
+  "editor.fontFamily": "Source Code Pro, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontWeight": "500",
+  "explorer.openEditors.visible": 0,
+  "files.hotExit": "off",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "files.trimTrailingWhitespace": true,
+  "window.openFilesInNewWindow": "on",
+  "workbench.iconTheme": "city-lights-icons-vsc-light",
+  "files.associations": {
+    ".devrc": "json",
+    ".env.development": "shellscript",
+    ".env.test": "shellscript",
+    "*.env": "shellscript"
+  },
+  "workbench.startupEditor": "newUntitledFile",
+  "editor.formatOnSave": true,
+  "window.newWindowDimensions": "maximized",
+  "cSpell.enabledLanguageIds": [
+    "asciidoc",
+    "c",
+    "cpp",
+    "csharp",
+    "css",
+    "go",
+    "handlebars",
+    "html",
+    "jade",
+    "javascriptreact",
+    "latex",
+    "less",
+    "markdown",
+    "php",
+    "plaintext",
+    "pub",
+    "python",
+    "restructuredtext",
+    "rust",
+    "scss",
+    "text",
+    "typescript",
+    "typescriptreact",
+    "yml"
+  ],
+  "window.restoreWindows": "none",
+  "javascript.updateImportsOnFileMove.enabled": "always"
 }
