Fixes a couple of issues:   - removes non-cask docker from Brewfile   - removes non MAS moom from Brewfile   - fixes antibody install

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,16 +1,12 @@
 cask_args appdir: "/Applications"
 tap "caskroom/cask"
 tap "caskroom/fonts"
+tap "heroku/brew"
 
 brew "aria2"
 brew "chruby"
-brew "docker-compose"
-brew "docker-machine-driver-xhyve"
-brew "docker-machine"
-brew "docker"
 brew "fzf"
-brew "getantibody/tap/antibody"
-brew "heroku/brew/heroku"
+brew "heroku"
 brew "kubernetes-cli"
 brew "mas"
 brew "node"
@@ -36,7 +32,6 @@ cask "font-source-code-pro"
 cask "google-chrome"
 cask "insomnia"
 cask "iterm2"
-cask "moom"
 cask "ngrok"
 cask "notion"
 cask "numi"
