adds sketch to Brewfile, removes Xcode

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -62,5 +62,8 @@
   "editor.tabSize": 2,
   "editor.formatOnPaste": true,
   "editor.multiCursorModifier": "ctrlCmd",
-  "editor.snippetSuggestions": "top"
+  "editor.snippetSuggestions": "top",
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
