--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -37,6 +37,7 @@ cask "notion"
 cask "numi"
 cask "postico"
 cask "sip"
+cask "sketch"
 cask "slack"
 cask "the-unarchiver"
 cask "virtualbox"
@@ -47,4 +48,3 @@ mas "Affinity Photo", id: 824183456
 mas "Medis", id: 1063631769
 mas "Moom", id: 419330170
 mas "Speedtest", id: 1153157709
-mas "Xcode", id: 497799835
