updates VSCode settings

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -65,5 +65,6 @@
   "editor.snippetSuggestions": "top",
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "explorer.confirmDragAndDrop": false
 }
