updates VSCode settings

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -66,5 +66,6 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "explorer.confirmDragAndDrop": false
+  "explorer.confirmDragAndDrop": false,
+  "breadcrumbs.enabled": true
 }
