adds drone to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -2,9 +2,11 @@ cask_args appdir: "/Applications"
 tap "caskroom/cask"
 tap "caskroom/fonts"
 tap "heroku/brew"
+tap "drone/drone"
 
 brew "aria2"
 brew "chruby"
+brew "drone"
 brew "fzf"
 brew "heroku"
 brew "kubernetes-cli"
