--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,53 +1,56 @@
-cask_args appdir: "/Applications"
-tap "caskroom/cask"
-tap "caskroom/fonts"
-tap "heroku/brew"
-tap "drone/drone"
+# frozen_string_literal: true
 
-brew "aria2"
-brew "chruby"
-brew "drone"
-brew "fzf"
-brew "heroku"
-brew "kubernetes-cli"
-brew "mas"
-brew "node"
-brew "openssl"
-brew "postgresql"
-brew "redis"
-brew "rsync"
-brew "ruby-install"
-brew "tree"
-brew "watchman"
-brew "wget"
-brew "xhyve"
-brew "zsh-completions"
-brew "zsh"
-cask "1password"
-cask "alfred"
-cask "dash"
-cask "docker"
-cask "dropbox"
-cask "expressvpn"
-cask "figma"
-cask "font-source-code-pro"
-cask "google-chrome"
-cask "insomnia"
-cask "iterm2"
-cask "ngrok"
-cask "notion"
-cask "numi"
-cask "postico"
-cask "sip"
-cask "sketch"
-cask "slack"
-cask "the-unarchiver"
-cask "virtualbox"
-cask "visual-studio-code"
-cask "vlc"
-mas "Affinity Designer", id: 824171161
-mas "Affinity Photo", id: 824183456
-mas "bandwidth", id: 490461369
-mas "Medis", id: 1063631769
-mas "Moom", id: 419330170
-mas "Speedtest", id: 1153157709
+cask_args appdir: '/Applications'
+tap 'caskroom/cask'
+tap 'caskroom/fonts'
+tap 'heroku/brew'
+tap 'drone/drone'
+
+brew 'aria2'
+brew 'chruby'
+brew 'drone'
+brew 'fzf'
+brew 'heroku'
+brew 'kubernetes-cli'
+brew 'mas'
+brew 'node'
+brew 'openssl'
+brew 'postgresql'
+brew 'redis'
+brew 'rsync'
+brew 'ruby-install'
+brew 'tree'
+brew 'watchman'
+brew 'wget'
+brew 'xhyve'
+brew 'zsh-completions'
+brew 'zsh'
+cask '1password'
+cask 'alfred'
+cask 'dash'
+cask 'docker'
+cask 'dropbox'
+cask 'expressvpn'
+cask 'figma'
+cask 'font-source-code-pro'
+cask 'google-chrome'
+cask 'insomnia'
+cask 'iterm2'
+cask 'ngrok'
+cask 'notion'
+cask 'numi'
+cask 'postico'
+cask 'sip'
+cask 'sketch'
+cask 'slack'
+cask 'the-unarchiver'
+cask 'virtualbox'
+cask 'visual-studio-code'
+cask 'vlc'
+mas 'Affinity Designer', id: 824_171_161
+mas 'Affinity Photo', id: 824_183_456
+mas 'bandwidth', id: 490_461_369
+mas 'Medis', id: 1_063_631_769
+mas 'Moom', id: 419_330_170
+mas 'Speedtest', id: 1_153_157_709
+mas 'Gif Brewery 3 by Gfycat', id: 1_081_413_713
