--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,10 +1,29 @@
 {
-  "workbench.colorTheme": "Cloud City",
-  "workbench.settings.editor": "json",
-  "editor.fontSize": 15,
+  "breadcrumbs.enabled": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.emptySelectionClipboard": false,
   "editor.fontFamily": "Source Code Pro, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontSize": 15,
   "editor.fontWeight": "500",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.hover.enabled": true,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "editor.parameterHints.enabled": false,
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": false,
+    "strings": false
+  },
+  "editor.scrollBeyondLastLine": true,
+  "editor.snippetSuggestions": "top",
+  "editor.tabCompletion": "onlySnippets",
+  "editor.tabSize": 2,
+  "eslint.alwaysShowStatus": true,
+  "eslint.packageManager": "yarn",
+  "explorer.confirmDragAndDrop": false,
   "explorer.openEditors.visible": 0,
+  "extensions.ignoreRecommendations": true,
   "files.hotExit": "off",
   "files.exclude": {
     "**/.git": true,
@@ -17,89 +36,35 @@
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
-  "window.openFilesInNewWindow": "on",
-  "workbench.iconTheme": "city-lights-icons-vsc-light",
   "files.associations": {
-    ".devrc": "json",
     ".env.development": "shellscript",
     ".env.test": "shellscript",
     "*.env": "shellscript",
-    ".huskyrc": "json",
-    ". lintstagedrc": "json",
-    ".lintstagedrc": "json"
+    ".env.staging": "shellscript",
+    ".env.production": "shellscript",
+    ".env.production.local": "shellscript",
+    ".foreman": "shellscript",
+    "Procfile": "shellscript",
+    ".powrc": "shellscript",
+    "*.apns": "json",
+    ".env.development.local": "shellscript",
+    ".env.staging.local": "shellscript",
+    ".env.test.local": "shellscript",
+    "*.local": "shellscript"
   },
-  "workbench.startupEditor": "newUntitledFile",
-  "editor.formatOnSave": true,
-  "window.newWindowDimensions": "maximized",
-  "cSpell.enabledLanguageIds": [
-    "asciidoc",
-    "c",
-    "cpp",
-    "csharp",
-    "css",
-    "go",
-    "handlebars",
-    "html",
-    "jade",
-    "javascriptreact",
-    "latex",
-    "less",
-    "markdown",
-    "php",
-    "plaintext",
-    "pub",
-    "python",
-    "restructuredtext",
-    "rust",
-    "scss",
-    "text",
-    "typescript",
-    "typescriptreact",
-    "yml"
-  ],
-  "window.restoreWindows": "none",
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "editor.find.autoFindInSelection": true,
-  "editor.emptySelectionClipboard": false,
-  "editor.scrollBeyondLastLine": true,
-  "editor.tabSize": 2,
-  "editor.formatOnPaste": true,
-  "editor.multiCursorModifier": "ctrlCmd",
-  "editor.snippetSuggestions": "top",
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "explorer.confirmDragAndDrop": false,
-  "breadcrumbs.enabled": true,
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "typescript.validate.enable": false,
-  "javascript.validate.enable": false,
-  "typescript.disableAutomaticTypeAcquisition": true,
-  "editor.parameterHints.enabled": false,
-  "editor.quickSuggestions": true,
-  "editor.hover.enabled": true,
-  "outline.icons": false,
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "editor.tabCompletion": "onlySnippets",
-  "ruby.rubocop.onSave": true,
-  "[ruby]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "misogi.ruby-rubocop"
-  },
-  "ruby.format": "rubocop",
-  "editor.formatOnSaveTimeout": 1500,
-  "window.zoomLevel": 0,
-  "extensions.ignoreRecommendations": true,
   "javascript.suggest.autoImports": false,
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "javascript.validate.enable": false,
+  "outline.icons": false,
   "typescript.suggest.autoImports": false,
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "eslint.packageManager": "yarn",
-  "eslint.alwaysShowStatus": true,
-  "search.usePCRE2": true
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.validate.enable": false,
+  "window.newWindowDimensions": "maximized",
+  "window.openFilesInNewWindow": "on",
+  "window.restoreWindows": "none",
+  "window.zoomLevel": 0,
+  "workbench.colorTheme": "Cloud City",
+  "workbench.iconTheme": "city-lights-icons-vsc-light",
+  "workbench.settings.editor": "json",
+  "workbench.startupEditor": "newUntitledFile"
 }
