Some updates during recent setup of a new MBP

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,8 +1,8 @@
 # frozen_string_literal: true
 
 cask_args appdir: '/Applications'
-tap 'caskroom/cask'
-tap 'caskroom/fonts'
+tap 'homebrew/cask'
+tap 'homebrew/cask-fonts'
 tap 'heroku/brew'
 tap 'drone/drone'
 
@@ -10,6 +10,7 @@ brew 'aria2'
 brew 'chruby'
 brew 'drone'
 brew 'fzf'
+brew 'getantibody/tap/antibody'
 brew 'heroku'
 brew 'kubernetes-cli'
 brew 'mas'
@@ -19,12 +20,13 @@ brew 'openssl'
 brew 'postgresql'
 brew 'redis'
 brew 'rsync'
-brew 'ruby'
 brew 'ruby-install'
+brew 'ruby'
 brew 'tree'
 brew 'watchman'
 brew 'wget'
 brew 'xhyve'
+brew 'yarn'
 brew 'zsh-completions'
 brew 'zsh'
 cask '1password'
@@ -38,7 +40,8 @@ cask 'font-source-code-pro'
 cask 'google-chrome'
 cask 'insomnia'
 cask 'iterm2'
-cask 'java'
+# Error: Cask 'java' is unavailable
+# cask 'java'
 cask 'ngrok'
 cask 'notion'
 cask 'numi'
@@ -46,6 +49,7 @@ cask 'postico'
 cask 'sip'
 cask 'sketch'
 cask 'slack'
+cask 'spotify'
 cask 'the-unarchiver'
 cask 'virtualbox'
 cask 'visual-studio-code'
