Adds some stuff to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -13,11 +13,13 @@ brew 'fzf'
 brew 'getantibody/tap/antibody'
 brew 'heroku'
 brew 'kubernetes-cli'
+brew 'libidn'
 brew 'mas'
 brew 'maven'
 brew 'node'
 brew 'openssl'
 brew 'postgresql'
+brew 'puma/puma/puma-dev'
 brew 'redis'
 brew 'rsync'
 brew 'ruby-install'
@@ -40,8 +42,6 @@ cask 'font-source-code-pro'
 cask 'google-chrome'
 cask 'insomnia'
 cask 'iterm2'
-# Error: Cask 'java' is unavailable
-# cask 'java'
 cask 'ngrok'
 cask 'notion'
 cask 'numi'
