Adds a git shortcut for making a PR off a new branch

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -66,5 +66,11 @@
   "workbench.iconTheme": "city-lights-icons-vsc-light",
   "workbench.settings.editor": "json",
   "workbench.startupEditor": "newUntitledFile",
-  "workbench.colorTheme": "Cloud City"
+  "workbench.colorTheme": "Cloud City",
+  "macros": {
+    "cleanupWorkspace": [
+      "workbench.action.closeAllEditors",
+      "workbench.files.action.collapseExplorerFolders"
+    ]
+  }
 }
