Adds soundflower to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -50,6 +50,7 @@ cask 'postico'
 cask 'sip'
 cask 'sketch'
 cask 'slack'
+cask 'soundflower'
 cask 'spotify'
 cask 'the-unarchiver'
 cask 'virtualbox'
