--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -45,13 +45,12 @@ cask 'iterm2'
 cask 'ngrok'
 cask 'notion'
 cask 'numi'
-cask 'obs'
 cask 'postico'
+cask 'screenflow'
 cask 'sip'
 cask 'sketch'
 cask 'skyfonts'
 cask 'slack'
-cask 'soundflower'
 cask 'spotify'
 cask 'the-unarchiver'
 cask 'virtualbox'
