adds google-cloud-sdk to Brewfile

--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -41,6 +41,7 @@ cask 'expressvpn'
 cask 'figma'
 cask 'font-source-code-pro'
 cask 'google-chrome'
+cask 'google-cloud-sdk'
 cask 'insomnia'
 cask 'iterm2'
 cask 'ngrok'
