--- a/Git/.gitconfig
+++ b/Git/.gitconfig
@@ -9,3 +9,8 @@
 	postBuffer = 157286400
 [pager]
 	branch = false
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
