--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -15,10 +15,12 @@ brew 'getantibody/tap/antibody'
 brew 'heroku'
 brew 'kubernetes-cli'
 brew 'libidn'
+brew 'libressl'
 brew 'mas'
 brew 'maven'
 brew 'node'
 brew 'openssl'
+brew 'pnpm'
 brew 'postgresql'
 brew 'puma/puma/puma-dev'
 brew 'redis'
