--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,10 +1,17 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "workbench.colorTheme": "Cloud City",
-  "workbench.iconTheme": "city-lights-icons-vsc-light",
-  "workbench.settings.editor": "json",
-  "editor.fontFamily": "Operator Mono, Roboto Mono, Menlo, Monaco, 'Courier New', monospace",
+  "[python]": {
+    "editor.formatOnType": true
+  },
+  "editor.accessibilitySupport": "off",
   "editor.bracketPairColorization.enabled": false,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.fontFamily": "Operator Mono, Roboto Mono, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontSize": 17,
+  "editor.fontWeight": 400,
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.inlineSuggest.enabled": true,
+  "editor.tabSize": 2,
   "editor.tokenColorCustomizations": {
     "textMateRules": [
       {
@@ -15,35 +22,50 @@
       }
     ]
   },
-  "editor.fontSize": 17,
-  "editor.fontWeight": 400,
-  "editor.tabSize": 2,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
-
+  "extensions.ignoreRecommendations": true,
+  "files.associations": {
+    "*.snap": "javascript",
+    "*.svg": "html",
+    ".env.development": "shellscript",
+    ".env.development.local": "shellscript",
+    ".env.local": "shellscript"
+  },
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
     "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.svn": true,
+    "**/CVS": true,
     "**/node_modules": true
   },
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
-  "editor.inlineSuggest.enabled": true,
+  "git.openRepositoryInParentFolders": "never",
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": false,
+    "scminput": false,
+    "typescriptreact": true,
+    "yaml": false
+  },
+  "javascript.updateImportsOnFileMove.enabled": "always",
   "macros": {
     "cleanupWorkspace": [
       "workbench.action.closeAllEditors",
       "workbench.files.action.collapseExplorerFolders"
     ]
   },
-  "extensions.ignoreRecommendations": true,
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "files.associations": {
-    ".env.local": "shellscript"
-  },
+  "window.newWindowDimensions": "maximized",
+  "workbench.colorTheme": "Cloud City",
+  "workbench.iconTheme": "city-lights-icons-vsc-light",
+  "workbench.settings.editor": "json",
   "workbench.startupEditor": "none",
-  "window.newWindowDimensions": "maximized"
+  "terminal.integrated.env.osx": {
+    "FIG_NEW_SESSION": "1"
+  },
+  "workbench.editor.revealIfOpen": false,
+  "todo.file.name": "*.todo",
+  "security.workspace.trust.untrustedFiles": "open"
 }
