--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -67,5 +67,6 @@
   },
   "workbench.editor.revealIfOpen": false,
   "todo.file.name": "*.todo",
-  "security.workspace.trust.untrustedFiles": "open"
+  "security.workspace.trust.untrustedFiles": "open",
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
